Trying to fix footer overlap

--- a/www/scss/style.scss
+++ b/www/scss/style.scss
@@ -25,7 +25,7 @@ html {
 body {
   height: 100%;
   width: 100%;
-  margin-bottom: 100px;
+  padding-bottom: 200px;
   min-width: 1118px; }
 
 h1, h2, h3, h4, h5, h6, body, span {
@@ -597,14 +597,15 @@ width: 90%;
   height: auto; }
 
 .footer {
+
   position: absolute;
+  text-align: center;
   padding: 10px 10px 10px 10px;
   display: flex;
-  margin: auto;
-  /*background-color: #eee;*/
+  margin-top: 300px;
   width: 100%;
   bottom: 0px;
-  height: 100px; 
+  height: 200px; 
 }
 
 
